--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
             <artifactId>docx4j</artifactId>
             <version>3.3.7</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
